RESOLVED FIXED75805
REGRESSION (r103859): WKViews leak
https://bugs.webkit.org/show_bug.cgi?id=75805
Summary REGRESSION (r103859): WKViews leak
mitz
Reported 2012-01-08 12:50:25 PST
REGRESSION (r103859): WKViews leak
Attachments
Add and remove the flags changed event monitor in -viewDidMoveToWindow (2.94 KB, patch)
2012-01-08 12:54 PST, mitz
darin: review+
mitz
Comment 1 2012-01-08 12:54:30 PST
Created attachment 121586 [details] Add and remove the flags changed event monitor in -viewDidMoveToWindow
mitz
Comment 2 2012-01-08 13:45:38 PST
Note You need to log in before you can comment on or make changes to this bug.