REGRESSION (r103859): WKViews leak https://bugs.webkit.org/show_bug.cgi?id=75805

The flags changed event monitor added in r103859 was retaining the WKView (as it references
self in the handler block), causing it to leak.

* UIProcess/API/mac/WKView.mm:
(-[WKView dealloc]): Moved call to remove the flags changed event monitor from here...
(-[WKView viewDidMoveToWindow]): ...to here. Moved call to add the flags changed event
monitor to here from...
(-[WKView initWithFrame:contextRef:pageGroupRef:]): ...here.



git-svn-id: svn://svn.chromium.org/blink/trunk@104409 bbb929c8-8fbe-4397-9dbb-9b2b20218538